kubernetes/paymentapp-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: payment-app-svc
spec:
  selector:
    app: payment-app
  ports:
    - port: 8080
      targetPort: 5000
  type: LoadBalancer
